<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Shopping Lists</string>
    <string name="action_settings">Settings</string>
    
    <string name="add_item">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="item_amount">Item Amount</string>
    
        <string name="add_list">Add List</string>
            <string name="list_name">List Name</string>
        
    
    <string name="lists_title">My Shopping Lists</string>
            
    
    <string name="items_title">My Items</string>
    <string name="add_button">ADD</string>
    
        <string name="items_subtitle">The List</string>
    
        
    <string name="save_data">Save</string>
    
    <string name="edit_item_title">Edit Item</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    
        <string name="edit_list_title">Edit List</string>
    
        
    <string name="toggle_on">Bought</string>
    <string name="toggle_off">Not Bought</string>

    
     <string-array name="list_context_menu">
        <item>"Edit"</item>
        <item>"Delete"</item>
        </string-array>
        
         <string-array name="colors">
        <item >blue</item>
        <item >white</item>
    </string-array>
</resources>